enum Action {
    FORWARD = 0;
    BACKWARD = 1;
    RIGHT = 2;
    LEFT = 3;
    SUPPRESS_SPIN = 4;
    SUPPRESS_DRIFT = 5;
}


message ClientMessage {
    repeated Action actions = 0;
}

message Actor {
    optional sint32 x = 0;
    optional sint32 y = 1;
    optional double r = 2;
    optional string image_path = 3;
    optional uint32 id = 4;
    optional bool deleted = 5 [default=false];
}

message ActorList {
    repeated Actor actors = 0;
}
